Background Image added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <title>Bootstrap Form</title>
 <link rel="shortcut icon" href="img/mypict.ico" type="image/png">
 
+<style>
+body {
+        background-image: url("img/bg.png");
+        background-size: cover;
+} 
+</style>
+
 </head>
 
 <body>
@@ -94,10 +101,6 @@
 					</div>
 
 				</form>
-			<blockquote>
-				<p>Form developed by Shafeef Omar</p>
-				<footer>Cool ain't it!</footer>
-			</blockquote>
 			</div>
 
 		</div>
