--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@ body {
 
 		<div class="row">
 			<div class="col-lg-6 col-lg-push-3">
-				<form action="" id="contactform" method="post" role="form">
+				<form action="" id="contactform" method="POST" role="form" onsubmit()="return Validate()" name="vform">
 					<div class="form-group">
 						<label for="name">Name</label>
 						<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 						<input type="text" class="form-control" id="name" placeholder="Full Name">
+						<div id="name_error" class="val_error"></div>
 						</div>
 					</div>
 
@@ -47,6 +48,7 @@ body {
 						<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 						<input type="text" class="form-control" id="username" placeholder="username@gmail.com">
+						<div id="email_error" class="val_error"></div>
 						</div>
 					</div>
 
@@ -63,6 +65,7 @@ body {
 						<div class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
 						<input type="password" class="form-control" id="pass2">
+						<div id="pass_error" class="val_error"></div>
 						</div>
 					</div>
 
@@ -71,6 +74,7 @@ body {
 						 <div class="input-group">
   						 <span class="input-group-addon">DOB</span>
 						<input type="text" class="form-control" id="bday" placeholder="DD/MM/YYYY">
+						<div id="bday_error" class="val_error"></div>
 						</div>
 					</div>
 
@@ -88,15 +92,17 @@ body {
 					<div class="form-group">
 						<label for="mob">Mobile Number</label>
 						<input type="text" class="form-control" id="mob">
+						<div id="mob_error" class="val_error"></div>
 					</div>
 
 					<div class="form-group">
 						<label for="add">Address</label>
 						<input type="text" class="form-control" id="add">
+						<div id="add_error" class="val_error"></div>
 					</div>
 
-					<div class="form-group">
-						<input type="button" value=Submit id="contactbtn" class="btn btn-default"/>
+					<div class="form-group" style="text-align: center">
+						<input type="button" value=Submit id="contactbtn" class="btn btn-default "/>
 						
 					</div>
 
